# swift-raspberry-pi-pico-examples

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  project.yml
.github/workflows/: build.yml
ex00-empty/: BridgingHeader.h  CMakeLists.txt  Main.swift
ex00-pico-w-blink/: CMakeLists.txt  Main.swift  build.sh
ex01-hid-keyboard/: BridgingHeader.h  CMakeLists.txt  Main.swift  usb_descriptors.c
ex02-pio-ws2812/: BridgingHeader.h  CMakeLists.txt  Main.swift  build.sh
ex03-kb2040/: BridgingHeader.h  CMakeLists.txt  Main.swift  Makefile
patchs/: cyw43_arch.patch  platform.patch
scripts/: screen.sh
tools/: Package.resolved
